--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
 </head>
 <body>
 <h2>title</h2>
-<nav class="navbar navbar-inverse" role="navigation">
-  ...
-</nav>
+<button type="button" class="btn btn-default navbar-btn">Sign in</button>
 
 <div id="main"></div>
 <div id="scres"></div>
