--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" type="text/css" href="bootstrap.cssdiv">
+<link rel="stylesheet" type="text/css" href="bootstrap.css">
 <head>
 	<title>Game</title>
 </head>
@@ -11,52 +11,25 @@
 <div id="main"></div>
 <div id="scres"></div>
 
-<div class="row">
-  <div class="col-md-1">.col-md-1</div>
-  <div class="col-md-1">.col-md-1</div>
-  <div class="col-md-1">.col-md-1</div>
-  <div class="col-md-1">.col-md-1</div>
-  <div class="col-md-1">.col-md-1</div>
-  <div class="col-md-1">.col-md-1</div>
-  <div class="col-md-1">.col-md-1</div>
-  <div class="col-md-1">.col-md-1</div>
-  <div class="col-md-1">.col-md-1</div>
-  <div class="col-md-1">.col-md-1</div>
-  <div class="col-md-1">.col-md-1</div>
-  <div class="col-md-1">.col-md-1</div>
-</div>
-<div class="row">
-  <div class="col-md-8">.col-md-8</div>
-  <div class="col-md-4">.col-md-4</div>
-</div>
-<div class="row">
-  <div class="col-md-4">.col-md-4</div>
-  <div class="col-md-4">.col-md-4</div>
-  <div class="col-md-4">.col-md-4</div>
-</div>
-<div class="row">
-  <div class="col-md-6">.col-md-6</div>
-  <div class="col-md-6">.col-md-6</div>
-</div>
 
 <div class="row">
 	<div class="col-md-12">
-		<div id="main"><canvas id="game"><canvas></canvas><div>
+		<div id="main"><canvas id="game"></canvas></div>
 	</div>
 </div>
 
 
 <script>
 (function () {
-	var canvas = document.getComentById('game');
-	var ctx = cavas.getContext('2d');
+	var canvas = document.getElementById('game');
+	var ctx = canvas.getContext('2d');
 
 	canvas.width = 480;
 	canvas.height = 320;
 
 	ctx.fillStyle = 'black';
 	ctx.beginPath();
-	cxt.arc(100,150,50,0,Math.PI*2,true);
+	ctx.arc(100, 150, 50, 0, Math.PI * 2, true);
 	ctx.fill();
 
 }) ();
