--- a/index.html
+++ b/index.html
@@ -21,15 +21,19 @@
 
 <script>
 (function () {
-	var canvas = document.getElementById('game');
-	var ctx = canvas.getContext('2d');
+	var canvas = document.getElementById('game'),
+	    ctx = canvas.getContext('2d'),
+
+	    ballX = Math.floor(Math.random() * 300),
+	    ballY = Math.floor(Math.random() * 500),
+	    ballR = Math.floor(Math.random() * 100);
 
 	canvas.width = 480;
 	canvas.height = 320;
 
 	ctx.fillStyle = 'black';
 	ctx.beginPath();
-	ctx.arc(100, 150, 50, 0, Math.PI * 2, true);
+	ctx.arc( ballX, ballY, ballR, 0, Math.PI * 2, true);
 	ctx.fill();
 
 }) ();
