--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,13 @@
 	<title>Game</title>
 </head>
 <body>
-<h2>title</h2>
-<button type="button" class="btn btn-default navbar-btn">Sign in</button>
-
-<div id="main"></div>
-<div id="scres"></div>
-
+<style>
+#main {
+  width: 640px;
+  height: 480px;
+  background: url(./bg.jpg);
+}
+</style>
 
 <div class="row">
 	<div class="col-md-12">
