--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" type="text/css" href="bootstrap.css">
 <head>
-	<title>Game</title>
+    <title>Game</title>
+    <link rel="stylesheet" type="text/css" href="bootstrap.css">
+    <script type="text/javascript" src="javascripts/jquery-1.10.2.min.js"></script>
 </head>
 <body>
 <style>
@@ -14,9 +15,9 @@
 </style>
 
 <div class="row">
-	<div class="col-md-12">
-		<div id="main"><canvas id="game"></canvas></div>
-	</div>
+    <div class="col-md-12">
+        <div id="main"><canvas id="game"></canvas></div>
+    </div>
 </div>
 
 <script type = "text/javascript"src = "main.js"></script>
